--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Classifier fof Scala course
+Classifier for Scala course
+
+Tests for classifier are not included in the project (see https://elibrary.ru/item.asp?id=20399632)
